[tool.poetry]
name = "qamarbooks-bot"
version = "0.1.0"
description = ""
authors = ["Javlon Baxtiyorov <baxtiyorovjavlon8@gmail.com>"]
readme = "README.md"
packages = [{include = "qamarbooks_bot"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
